--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,8 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/futura-font/styles.css"
+              "node_modules/futura-font/styles.css",
+              "node_modules/animate.css/animate.min.css"
             ],
             "scripts": []
           },
