--- a/src/assets/projects.json
+++ b/src/assets/projects.json
@@ -2,7 +2,7 @@
     {
         "name": "Trumpet",
         "url": "https://github.com/charlesabarnes/trumpet",
-        "image": "",
+        "image": "trumpet.png",
         "tools": [
             "NodeJs",
             "Express",
@@ -66,7 +66,7 @@
     {
         "name": "RAMPS",
         "url": "",
-        "image": "",
+        "image": "ramps.png",
         "tools": [
             "NodeJs",
             "Express",
@@ -97,7 +97,7 @@
     {
         "name": "Dataloader GUI",
         "url": "https://github.com/charlesabarnes/dataloaderGUI",
-        "image": "",
+        "image": "dataloaderGUI.png",
         "tools": [
             "Java"
         ],
