--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "aot": false,
+            "aot": true,
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -47,7 +47,6 @@
               "sourceMap": false,
               "extractCss": true,
               "namedChunks": false,
-              "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true,
@@ -126,6 +125,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "personal-site"
+    }
+  },
+  "defaultProject": "personal-site",
+  "cli": {
+    "analytics": "419246c4-43a6-4eb7-8b69-6608fdb4a190"
+  }
 }
