--- a/angular.json
+++ b/angular.json
@@ -115,6 +115,9 @@
               "devServerTarget": "personal-site:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
