--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "deploy": "ng deploy --base-href=/angular-ci-cd-with-github-actions/"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +34,7 @@
     "@angular/compiler-cli": "^14.2.6",
     "@angular/language-service": "^14.2.6",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.3",
     "codelyzer": "^6.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~6.1.0",
